--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -691,7 +691,11 @@
 
 \newglossaryentry{mutacja}{
     name={Mutacja},
-    description={W TanStack Query: asynchroniczna operacja modyfikująca stan danych po stronie serwera
-    (utworzenie/aktualizacja/usunięcie), zwykle realizowana wywołaniem API (POST/PUT/PATCH/DELETE);
-    przeciwieństwo zapytania (query) służącego do odczytu.}
+    description={W TanStack Query: operacja wysyłająca żądanie zmiany (POST/PUT/PATCH/DELETE) i
+    zarządzająca jego stanem (pending/success/error) oraz reakcją aplikacji, aktualizacją lub unieważnieniem cache.}
+}
+
+\newglossaryentry{store}{
+    name={Store (Redux)},
+    description={Centralny obiekt przechowujący globalny stan aplikacji (state) w \glslink{redux}{Reduxie}.}
 }
