--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -126,7 +126,7 @@
 \newglossaryentry{dto}
 {
     name={DTO},
-    description={Skrót od \textit{Data Transfer Object}. Prosty obiekt przenoszący dane między warstwami systemu lub między usługami. Zawiera pola danych, zazwyczaj bez logiki biznesowej}
+    description={Skrót od \textit{Data Transfer Object}. Obiekt przenoszący dane między warstwami systemu lub między usługami. Zawiera pola danych, zazwyczaj bez logiki biznesowej}
 }
 
 \newglossaryentry{modal}
@@ -684,7 +684,7 @@
 
 \newglossaryentry{stomp}{
     name={STOMP},
-    description={Prosty protokół wiadomościowy działający „nad” \gls{websocket}. Wprowadza pojęcia \glslink{destynacja}{destynacji}, \glslink{subskrypcja}{subskrypcji} i wysyłania komunikatów w modelu \gls{publish-subscribe}.}
+    description={Protokół wiadomościowy działający „nad” \gls{websocket}. Wprowadza pojęcia \glslink{destynacja}{destynacji}, \glslink{subskrypcja}{subskrypcji} i wysyłania komunikatów w modelu \gls{publish-subscribe}.}
 }
 
 \newglossaryentry{http}{
@@ -699,7 +699,8 @@
 
 \newglossaryentry{rfc}{
     name={RFC},
-    description={Dokument opisujący standardy i zalecenia dotyczące Internetu (ang. \textit{Request for Comments}).}
+    description={Request for Comments to numerowane publikacje opisujące ustalenia dotyczące działania Internetu — m.in. protokoły, formaty danych i dobre praktyki.
+    Są wydawane w ramach społeczności \gls{ietf}.}
 }
 
 \newglossaryentry{handshake}{
@@ -754,7 +755,7 @@
 
 \newglossaryentry{serwer}{
     name={serwer},
-    description={Część systemu (zwykle po stronie \gls{backend}u), która przetwarza żądania i udostępnia dane lub funkcje \gls{klient}om.}
+    description={Część systemu (zwykle po stronie \glslink{backend}{backendu}), która przetwarza żądania i udostępnia dane lub funkcje \glslink{klient}{klientom}.}
 }
 
 \newglossaryentry{klient}{
