--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -404,3 +404,8 @@
     \glslink{framework}{frameworki}.
     Zaczynają się symbolem \textit{@}}
 }
+
+\newglossaryentry{react-component}{
+    name={Komponent React},
+    description={TODO}
+}
