--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -872,3 +872,8 @@
     description={Obiekt opisujący zdarzenie/operację zmiany stanu w Redux, obsługiwany przez reducery (np. \texttt{chatActions.setLastMessage(...)})}
 }
 
+\newglossaryentry{fallback}
+{
+    name={Fallback},
+    description={Mechanizm awaryjnego przełączania na alternatywny sposób działania, gdy preferowana metoda jest niedostępna. W kontekście WebSocket/SockJS oznacza automatyczne przejście z WebSocket na techniki oparte o HTTP (np. streaming lub long polling), aby utrzymać komunikację.}
+}
