--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -405,7 +405,28 @@
     Zaczynają się symbolem \textit{@}}
 }
 
+\newglossaryentry{jsx}{
+    name={JSX},
+    description={JavaScript XML; składnia pozwalająca pisać kod wyglądający jak HTML w plikach JavaScript.
+    Umożliwia między innymi wyświetlanie zawartości zmiennych poprzez umieszczenie ich w \{\}}
+}
+
 \newglossaryentry{react-component}{
     name={Komponent React},
-    description={TODO}
+    description={Podstawowy blok budujący aplikację React, który zwraca \glslink{jsx}{JSX}.
+    Cykl życia komponentu ma trzy stany: montowanie (inicjalizacja i renderowanie),
+    aktualizacja (reagowanie na zmiany), demontowanie (usunięcie komponentu z drzewa \glslink{dom}{DOM}),
+    a ich nazwy muszą zaczynać się wielką literą.
+    Powinien być tworzony w sposób umożliwiający jego wieloktrone użycie w projekcie.
+    Komponenty dzielą się na dwa rodzaje:
+    \begin{itemize}
+        \item \textbf{Komponenty Klasowe} \textemdash \space klasy JavaScript dziedziczące po wbudowanej klasie Component.
+        Pozwalają na zarządzanie stanem poprzez object \textit{state}, zawierający się w każdym komponencie klasowym.
+        Zarządzanie cyklem życia komponentu odbywa się za pomocą wbudowanych metod.
+        Po wprowadzeniu komponentów funkcyjnych nie zaleca się stosowania klasowych.
+        \item \textbf{Komponenty Funkcyjne} \textemdash \space definiowane jak funkcje JavaScript.
+        \glslink{props}{Propsy} są przyjmowane poprzez argumenty funkcji.
+        Zarządzanie stanem oraz cyklem życia komponentu odbywa się za pomocą \glslink{hook}{hook'ów} takich jak
+        \textit{useState}.
+    \end{itemize}}
 }
