Wymagania dla czatu (#213)
* fix

* praca

* 12

* am63

* am64

* niezle

* git

* git 2

* a

* poprawa wyamgan ogolnych

* poprawa wyamgan funkc

* poprawa wyamgan glosarisuza i wf

* poprawa wyamgan glosarisuza i wf

* wymagania pozafunkcjonalne

* wp

* wp2

* k

* fix after merge

* poprawa glsosary

* poprawa 1

* poprawa 2

* poprawa 3

* porpawa numeracji

* poprawa review

---------

Co-authored-by: Adam Langmesser <114993042+s27119@users.noreply.github.com>

--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -14,6 +14,13 @@
 \usepackage[T1]{fontenc}
 \usepackage{longtable}
 
+\setcounter{secnumdepth}{3}
+\setcounter{tocdepth}{3}
+\usepackage{titlesec}
+\titleformat{\paragraph}[block]{\normalfont\normalsize\bfseries}{\theparagraph}{1em}{}
+\titlespacing*{\paragraph}{0pt}{1ex}{0.8ex}
+\newcommand{\subsubsubsection}[1]{\paragraph{#1}}
+
 %nowe pakiety do tabel:
 \usepackage{booktabs}
 \usepackage{array,ltablex}
