--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -773,7 +773,7 @@
 }
 
 \newglossaryentry{callback}{
-    name={Callback},
+    name={callback},
     description={Funkcja przekazywana jako parametr, wywoływana automatycznie przy wystąpieniu zdarzenia (np. gdy nadejdzie wiadomość z WebSocket).}
 }
 
@@ -823,7 +823,7 @@
 }
 
 \newglossaryentry{deserializacja}{
-    name={Deserializacja},
+    name={deserializacja},
     description={Proces odtworzenia obiektu z formatu przenośnego (np. JSON) po stronie odbiorcy}
 }
 
@@ -844,12 +844,12 @@
 
 \newglossaryentry{montowanie}{
     name={montowanie},
-    description={Moment „podpięcia” komponentu do drzewa UI (pierwsze wyrenderowanie i inicjalizacja)}
+    description={Moment „podpięcia” komponentu do drzewa UI.}
 }
 
 \newglossaryentry{odmontowanie}{
     name={odmontowanie},
-    description={Usunięcie komponentu z drzewa UI (moment zwalniania zasobów i zdejmowania subskrypcji)}
+    description={Usunięcie komponentu z drzewa UI.}
 }
 
 \newglossaryentry{tablica_zaleznosci}{
