--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -781,15 +781,10 @@
     name={Store (Redux)},
     description={Centralne miejsce przechowywania stanu aplikacji w Redux. Pozwala odczytywać aktualny stan oraz wysyłać akcje zmieniające ten stan.}
 }
-\newglossaryentry{propsy}
-{
-    name={propsy},
-    description={Zestaw właściwości przekazywanych do komponentu React przez komponent nadrzędny.}
-}
 
 \newglossaryentry{kontekst}{
     name={kontekst React'a},
-    description={Mechanizm w React pozwalający udostępnić wspólny obiekt wielu komponentom bez przekazywania go przez \gls{propsy}.}
+    description={Mechanizm w React pozwalający udostępnić wspólny obiekt wielu komponentom bez przekazywania go przez \glslink{props}{propsy}.}
 }
 
 \newglossaryentry{reconnect}{
