--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -32,6 +32,8 @@
 
 \setlist[description]{leftmargin=0pt,labelindent=0pt}
 
+\setcounter{secnumdepth}{3}
+\setcounter{tocdepth}{3}
 
 \hypersetup{
     colorlinks=true,
