--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -192,7 +192,7 @@
 \newglossaryentry{folder-by-type}
 {
     name={Folder by type},
-    description={Sposób organizowania struktury katalogów w projekcie, w którym pliki są grupowane według rodzaju (typu) zasobu, a nie według funkcjonalności. Na przykład wszystkie komponenty trafiają do jednego folderu, wszystkie style do innego itd.}
+    description={Sposób organizowania struktury katalogów w projekcie, w którym pliki są grupowane według rodzaju (typu) zasobu, a nie według funkcjonalności. Na przykład wszystkie komponenty trafiają do jednego folderu, wszystkie style do innego itd}
 }
 
 \newglossaryentry{biblioteka}
@@ -684,4 +684,20 @@
     name={Wolumen},
     description={Zarządzane przez Dockera magazyny danych dla kontenerów, które
     są odizolowane od maszyny hosta.}
+}
+
+\newglossaryentry{debounce}{
+    name={Debounce},
+    description={Technika programistyczna polegająca na ograniczaniu liczby wywołań funkcji poprzez jej uruchomienie dopiero po upływie zadanego czasu od ostatniego wywołania.}
+}
+
+\newglossaryentry{mutacja}{
+    name={Mutacja},
+    description={W TanStack Query: operacja wysyłająca żądanie zmiany (POST/PUT/PATCH/DELETE) i
+    zarządzająca jego stanem (pending/success/error) oraz reakcją aplikacji, aktualizacją lub unieważnieniem cache.}
+}
+
+\newglossaryentry{store}{
+    name={Store (Redux)},
+    description={Centralny obiekt przechowujący globalny stan aplikacji (state) w \glslink{redux}{Reduxie}.}
 }
