--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -31,6 +31,8 @@
 \newcolumntype{L}[1]{>{\raggedright\arraybackslash}p{#1}}
 
 \setlist[description]{leftmargin=0pt,labelindent=0pt}
+\setcounter{secnumdepth}{3}
+\setcounter{tocdepth}{3}
 
 \setcounter{secnumdepth}{3}
 \setcounter{tocdepth}{3}
