Update bibliography and glossary entries for consistency and clarity

--- a/book/bibliography.bib
+++ b/book/bibliography.bib
@@ -162,6 +162,7 @@
     author = {Michał Wolski},
     url = {https://wolski.pro/2024/05/10-wskazowek-poprawiajacych-modelowanie-procesow-biznesowych-w-notacji-bpmn/},
     urldate = {2025-11-19},
+    date = {2024-05-14},
 }
 
 @online{rfc6455,
