--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -778,7 +778,7 @@
 }
 
 \newglossaryentry{store}{
-    name={Store (Redux)},
+    name={store (Redux)},
     description={Centralne miejsce przechowywania stanu aplikacji w Redux. Pozwala odczytywać aktualny stan oraz wysyłać akcje zmieniające ten stan.}
 }
 
@@ -886,11 +886,6 @@
     a w przypadku błędu po stronie serwera zmiana jest cofana lub oznaczana jako nieudana.}
 }
 
-
-
-
-
-
 \newglossaryentry{debounce}{
     name={Debounce},
     description={Technika programistyczna polegająca na ograniczaniu liczby wywołań funkcji poprzez jej uruchomienie dopiero po upływie zadanego czasu od ostatniego wywołania.}
@@ -900,9 +895,4 @@
     name={Mutacja},
     description={W TanStack Query: operacja wysyłająca żądanie zmiany (POST/PUT/PATCH/DELETE) i
     zarządzająca jego stanem (pending/success/error) oraz reakcją aplikacji, aktualizacją lub unieważnieniem cache.}
-}
-
-\newglossaryentry{store}{
-    name={Store (Redux)},
-    description={Centralny obiekt przechowujący globalny stan aplikacji (state) w \glslink{redux}{Reduxie}.}
 }
