Fix after review

--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -711,3 +711,29 @@
     składający się z jednego lub wielu jobów.}
 }
 
+\newglossaryentry{pull-request}{
+    name={Pull request},
+    description={Mechanizm służący do zgłaszania propozycji zmian w kodzie i ich scalania do wybranej gałęzi.
+    Umożliwia przegląd kodu (code review), uruchamianie testów oraz dyskusję nad zmianami przed wykonaniem scalenia.}
+}
+
+\newglossaryentry{merge}{
+    name={Merge},
+    description={Proces scalania zmian z jednej gałęzi do innej (z gałęzi funkcjonalnej do \texttt{develop}
+    lub \texttt{master}). Scalenie integruje historię commitów oraz może wymagać rozwiązania konfliktów,
+    jeśli zmiany dotyczą tych samych fragmentów kodu.}
+}
+
+\newglossaryentry{node}{
+    name={Node.js},
+    description={Środowisko uruchomieniowe oparte na silniku V8, umożliwiające wykonywanie kodu JavaScript
+    poza przeglądarką. W projektach frontendowych wykorzystywane do instalacji zależności (npm) oraz
+    uruchamiania narzędzi budowania i testów.}
+}
+
+\newglossaryentry{maven}{
+    name={Maven},
+    description={Narzędzie do automatyzacji budowania projektów w języku Java, zarządzania zależnościami oraz
+    uruchamiania testów. Konfiguracja procesu budowania i zależności jest definiowana w pliku \texttt{pom.xml}.}
+}
+
