Refactor glossary entries for consistency in naming conventions

--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -317,7 +317,7 @@
 }
 
 \newglossaryentry{hook}{
-    name={Hook (React)},
+    name={hook},
     description={Prosta funkcja w React, która „dodaje” możliwości do elementu interfejsu — np. pozwala mu coś zapamiętać (stan) albo zrobić coś po zmianie/załadowaniu. Wszystkie hooki zaczynają się od \texttt{use...} (np. \texttt{useState}, \texttt{useEffect}).}
 }
 
@@ -778,7 +778,7 @@
 }
 
 \newglossaryentry{store}{
-    name={store (Redux)},
+    name={store},
     description={Centralne miejsce przechowywania stanu aplikacji w Redux. Pozwala odczytywać aktualny stan oraz wysyłać akcje zmieniające ten stan.}
 }
 
@@ -863,7 +863,7 @@
 }
 
 \newglossaryentry{redux_dispatch}{
-    name={dispatch (Redux)},
+    name={dispatch},
     description={Funkcja w Redux służąca do wysyłania akcji, które modyfikują stan przechowywany w store}
 }
 
