Fix after review

--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -800,9 +800,8 @@
 
 \newglossaryentry{merge}{
     name={Merge},
-    description={Proces scalania zmian z jednej gałęzi do innej (z gałęzi funkcjonalnej do \texttt{develop}
-    lub \texttt{master}). Scalenie integruje historię commitów oraz może wymagać rozwiązania konfliktów,
-    jeśli zmiany dotyczą tych samych fragmentów kodu.}
+    description={Proces scalania zmian z jednej gałęzi do innej. Scalenie integruje historię commitów oraz
+    może wymagać rozwiązania konfliktów, jeśli zmiany dotyczą tych samych fragmentów kodu.}
 }
 
 \newglossaryentry{node}{
