Try to add a3 page

--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -13,6 +13,12 @@
 \usepackage[table]{xcolor} % kolory w tabelach
 \usepackage[T1]{fontenc}
 \usepackage{longtable}
+\usepackage{geometry}
+\usepackage{lipsum}
+\usepackage{pdflscape}
+\usepackage{caption} % daje \captionof
+
+
 
 \setcounter{secnumdepth}{3}
 \setcounter{tocdepth}{3}
