Update bibliography and enhance documentation for Spring Security implementation

--- a/book/bibliography.bib
+++ b/book/bibliography.bib
@@ -170,7 +170,7 @@
     title = {Język UML 2.0 w modelowaniu systemów informatycznych},
     publisher = {Helion},
     isbn = {83-736-1892-9, 8373618929},
-    year ={2006},
+    year = {2006},
     location = {Warszawa}
 }
 
@@ -180,4 +180,18 @@
     url = {https://wolski.pro/2024/05/10-wskazowek-poprawiajacych-modelowanie-procesow-biznesowych-w-notacji-bpmn/},
     urldate = {2025-11-19},
     date = {2024-05-14},
+}
+
+@online{spring-security,
+    title = {Spring Security (Spring Framework Reference Documentation)},
+    organization = {Spring},
+    url = {https://docs.spring.io/spring-security/reference/index.html},
+    urldate = {2025-12-22}
+}
+
+@online{spring-security-architecture,
+    title = {Spring Security Architecture (Spring Framework Reference Documentation)},
+    organization = {Spring},
+    url = {https://docs.spring.io/spring-security/reference/servlet/architecture.html},
+    urldate = {2025-12-22}
 }
