Update engineer.tex to clarify framework references

--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -95,7 +95,7 @@
     warstwy \glslink{backend}{backendowej} oraz \glslink{baza-danych}{bazy danych}.
     Aplikację internetową wykonano z wykorzystaniem \glslink{framework}{frameworka} \glslink{react}{React} w językach JavaScript
     oraz \glslink{type-script}{TypeScript}, a do stylizacji użyto \glslink{tailwind-css}{Tailwind CSS}.
-    Serwis \glslink{backend}{backendowy} stworzono w języku Java z wykorzystaniem frameworka Spring Boot.
+    Serwis \glslink{backend}{backendowy} stworzono w języku Java z wykorzystaniem \glslink{framework}{frameworka} \glslink{spring-boot}{Spring Boot}.
     \glslink{baza-danych}{Bazę danych} oparto na systemie PostgreSQL.\newline
     Komunikacja między komponentami odbywała się poprzez \glslink{api}{API} zgodne ze stylem architektonicznym \glslink{rest_api}{REST}.
     Projekt zrealizowano w podejściu \textbf{Disciplined Agile Delivery}~\cite{DAD} w wariancie \textbf{Lean Life Cycle}~\cite{DAD-LLF}.
