--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -767,3 +767,9 @@
         \textit{useState}.
     \end{itemize}}
 }
+
+\newglossaryentry{github-actions}{
+    name={GitHub Actions},
+    description={Usługa platformy GitHub umożliwiająca automatyzację procesów \gls{cicd}, takich jak budowanie projektu,
+    uruchamianie testów oraz wdrażanie aplikacji w odpowiedzi na zdarzenia w repozytorium (np. \textit{push} lub \textit{pull request}).}
+}
