Fix after review

--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -90,11 +90,11 @@
 
 \nabstract{
     Celem niniejszej pracy było stworzenie w pełni funkcjonalnej aplikacji internetowej umożliwiającej szybkie
-    wyszukiwanie spotów w okolicy oraz dzielenie się zdjęciami, filmami i doświadczeniami z innymi użytkownikami.
+    wyszukiwanie \glslink{spot}{spotów} w okolicy oraz dzielenie się zdjęciami, filmami i doświadczeniami z innymi użytkownikami.
     W ramach pracy opracowano system składający się z trzech komponentów: warstwy \glslink{frontend}{frontendowej},
     warstwy \glslink{backend}{backendowej} oraz \glslink{baza-danych}{bazy danych}.
-    Aplikację internetową wykonano z wykorzystaniem \glslink{framework}{frameworka} \glslink{react}{React} w językach JavaScript
-    oraz \glslink{type-script}{TypeScript}, a do stylizacji użyto \glslink{tailwind-css}{Tailwind CSS}.
+    Aplikację internetową wykonano z wykorzystaniem \glslink{framework}{frameworka} \glslink{react}{React} w języku JavaScript
+    oraz jego rozszerzeniu (\glslink{type-script}{TypeScript}), a do stylizacji użyto \glslink{tailwind-css}{Tailwind CSS}.
     Serwis \glslink{backend}{backendowy} stworzono w języku Java z wykorzystaniem \glslink{framework}{frameworka} \glslink{spring-boot}{Spring Boot}.
     \glslink{baza-danych}{Bazę danych} oparto na systemie PostgreSQL.\newline
     Komunikacja między komponentami odbywała się poprzez \glslink{api}{API} zgodne ze stylem architektonicznym \glslink{rest_api}{REST}.
