--- a/book/bibliography.bib
+++ b/book/bibliography.bib
@@ -189,3 +189,11 @@
     urldate = {2025-11-19},
     date = {2024-05-14},
 }
+
+@online{oauth-docs-rfc,
+    title = {The OAuth 2.0 Authorization Framework},
+    organization = {Internet Engineering Task Force},
+    url = {https://datatracker.ietf.org/doc/html/rfc6749},
+    urldate = {2025-12-30},
+    date = {2012-10-01}
+}
